# config

./: .editorconfig  README.md  debian-config  debian-config-functions  debian-config-functions-network  debian-config-jobs  debian-config-submenu  debian-software  functions.sh  install.sh  softy
.github/: FUNDING.yml
backup/: filelist.txt
backup and restore/: backup.sh  filelist.txt  sync.sh
scripts/: tv_grab_file
src/: rpimonconf.tgz  rpimonitor-myconfig.tgz  temp-pir-daemon.sh  temper14.c  temper_v14_altered.tgz  tsl2561-src.tgz
src/scanbuttond-0.2.3/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in  scanbuttond.c
src/scanbuttond-0.2.3/backends/: Makefile.am  Makefile.in  epson.c  epson.h  meta.c  meta.conf  meta.h  mustek.c  mustek.h  niash.c  niash.h  plustek.c  plustek.h  plustek_umax.c  plustek_umax.h  snapscan.c  snapscan.h
src/scanbuttond-0.2.3/contrib/: Makefile.am  Makefile.in  initscript.gentoo
src/scanbuttond-0.2.3/include/scanbuttond/: backend.h  common.h  config.h.in  libusbi.h  loader.h  scanbuttond.h
src/scanbuttond-0.2.3/interface/: Makefile.am  Makefile.in  libusbi.c
src/scanbuttond-0.2.3/lib/: loader.c
src/scanbuttond-0.2.3/scripts/: Makefile.am  Makefile.in  buttonpressed.sh  initscanner.sh
